--- a/House/House.csproj
+++ b/House/House.csproj
@@ -52,8 +52,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IHasExteriorDoor.cs" />
+    <Compile Include="IHidingPlace.cs" />
+    <Compile Include="Location.cs" />
+    <Compile Include="Opponent.cs" />
+    <Compile Include="Outside.cs" />
+    <Compile Include="OutsideWithDoor.cs" />
+    <Compile Include="OutsideWithHidingPlace.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room.cs" />
+    <Compile Include="RoomWithDoor.cs" />
+    <Compile Include="RoomWithHidingPlace.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
